--- a/stm32_project/project/Objects/Project.build_log.htm
+++ b/stm32_project/project/Objects/Project.build_log.htm
@@ -21,11 +21,12 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.14.0_KEIL
 Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
-C:\Users\Achiever\Desktop\指纹识别系统-V1.5\指纹识别系统\project\Project.uvprojx
+c:\Users\Achiever\Desktop\doc\芙蓉\指纹识别系统-V1.5\Fingerprint-identification-system\stm32_project\project\Project.uvprojx
 Project File Date:  05/10/2024
 
 <h2>Output:</h2>
 Build target 'Target 1'
+compiling ctl_as608.c...
 compiling usart1.c...
 Usart\usart1.c(136): warning:  #223-D: function "delay_and_display" declared implicitly
                 delay_and_display("Waiting data", 3000);
@@ -33,11 +34,11 @@ Usart\usart1.c(140): warning:  #68-D: integer conversion resulted in a change of
                         return -1;
 Usart\usart1.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=16052 RO-data=2320 RW-data=68 ZI-data=2812  
+Program Size: Code=16204 RO-data=2320 RW-data=68 ZI-data=2812  
 ".\Objects\Project.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\Achiever\Desktop\指纹识别系统-V1.5\指纹识别系统\project\RTE
+  c:\Users\Achiever\Desktop\doc\芙蓉\指纹识别系统-V1.5\Fingerprint-identification-system\stm32_project\project\RTE
   D:\Software\code_software\keil\pack\Keil\STM32F1xx_DFP\1.0.5\Device\Include
 
 <h2>Collection of Component Files used:</h2>
